Fix alignment by changing navbar content

--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,6 @@ p {
   }
 }
 
-@media (min-width: 1800px) {
-  .head-container {
-    margin-right: -6rem;
-    margin-left: 25rem;
-  }
-}
-
 .icon-dual-primary {
   color: #609992;
   fill: rgba(47, 85, 212, 0.2);
